# Raphtory

./: .bumpversion.cfg  .dockerignore  .env.example  .environment.yml  .gitattributes  .gitignore  .gitmodules  .jvmopts  .readthedocs.yaml  .rustfmt.toml  .sbtopts  .scalafmt.conf  API_REFERENCE_LINKS.yaml  BUILD.md  Build.sbt  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile-gh  LICENSE  MANIFEST.in  Makefile  PyRaphtory.ipynb  README.md  SECURITY.md  aml.ipynb  autoSetup.sh  build.sbt  docker-compose.yml  gensetup.scala  hide_arrow_dep.sh  ignore_Cargo.toml  logblock.txt  machine0Setup.sh  machine1Setup.sh  manual_test  misc.ipynb  mkdocs.yml  multimachinesetupgen.py  onemachinesetupgen.py  (+15 more)
db4-graph/: Cargo.toml
db4-graph/src/: lib.rs  replay.rs
db4-storage/: Cargo.toml  build.rs
db4-storage/src/: gen_t_props.rs  gen_ts.rs  generic_t_props.rs  lib.rs  state.rs  utils.rs
disk-faiss/: Cargo.toml  build.rs
disk-faiss/src/: lib.rs
disk-test/: Cargo.toml
disk-test/benches/: bench.rs
disk-test/src/: lib.rs  main.rs
docbrown/core/: Cargo.toml
docbrown/db/: Cargo.toml
examples/: Cargo.toml  README.md
examples/binder_python/: 0_Getting_started.ipynb  1_LOTR.ipynb  index.ipynb
examples/btc/: Cargo.toml
examples/companies-house/: README.md  build.sbt
examples/covid-socialconnectedness/: network.html  primaryschool.csv
examples/custom-algorithm/: Cargo.toml
examples/custom-gql-apis/: Cargo.toml  pyproject.toml
examples/custom_python_extension/: Cargo.toml  pyproject.toml
examples/enron/: .gitignore  README.md
examples/ethereum/: .gitattributes  README.md
examples/gab/: README.md  build.sbt
examples/grafana/: docker-compose.yml  tempo.yaml
examples/graph500/: Cargo.toml
examples/lanl/: Cargo.toml
examples/lotr/: Cargo.toml  README.md  build.sbt
examples/netflow/: Cargo.toml  pyproject.toml
examples/nft/: README.md  build.sbt
examples/raphtory-example-bots/: build.sbt
examples/raphtory-example-coho/: build.sbt
examples/raphtory-example-enron/: README.md  build.sbt
examples/raphtory-example-ethereum/: README.md  build.sbt
examples/raphtory-example-facebook/: README.md  build.sbt
examples/raphtory-example-gab/: README.md  build.sbt
examples/raphtory-example-lotr/: README.md  build.sbt
examples/raphtory-example-nft/: README.md  build.sbt
examples/raphtory-example-presto/: README.md  build.sbt
examples/raphtory-example-twitter/: README.md  build.sbt
examples/raphtory-example-twittercircles/: README.md  build.sbt
examples/rust/: Cargo.toml
examples/twitter/: .gitignore  README.md  build.sbt
fast_merge/: Cargo.toml
fast_merge/benches/: bench.rs
fast_merge/src/: lib.rs  merge.rs  merge_impl.rs
js-raphtory/: Cargo.toml
js-raphtory/example/: .gitignore  index.html  index.js  package-lock.json  package.json  webpack.config.js
js-raphtory/src/: graph.rs  lib.rs
js-raphtory/www/: index.js
pometry-storage/: .gitignore  Cargo.toml
pometry-storage/benches/: merge_bench.rs
pometry-storage/src/: disk_hmap.rs  edge.rs  edge_list.rs  edges.rs  global_order.rs  graph.rs  graph_fragment.rs  interop.rs  lib.rs  nodes.rs  properties.rs  timestamps.rs  tprops.rs
pyraphtory/: Cargo.toml  pyproject.toml
pyraphtory/src/: graph.rs  graph_window.rs  graphdb.rs  lib.rs  wrappers.rs
pyraphtory/tests/: notebook.ipynb  test_graphdb.py
python/: .gitignore  Cargo.toml  LOTR_demo.ipynb  README.md  Untitled.ipynb  example.py  profile.json  pyproject.toml  setup.py  test.py  tox.ini
python/_custom_build/: .gitignore  backend.py  check_platform.py  ivy.py  ivysettings.xml  java.py  paths.py  sbt_build.py
python/build_tests/: core_2.13_ivy.xml  test_pyraphtory_jvm.py
python/client/: __init__.py  raphtoryclient.py
python/conda/: build.sh  meta.yaml  run_test.py
python/pyraphtory/: .gitignore  README.md  __init__.py  _config.py  _docstring.py  degree.py  dockerfile  globaltrianglecount.py  graph.py  interop.py  localtrianglecount.py  pagerank.py  poetry.toml  pyproject.toml  sample.py  setup.py  twohoppaths.py
python/pyraphtory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/pyraphtory_jvm/: .bumpversion.cfg  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
python/python/: check-stubs.py  cli.py  gen-stubs.py
python/raphtoryclient/: CreateAlgoExample.py  RaphtoryContext.py  Serializer.py  SimpleGateway.py  SubmitQueryExample.py  __init__.py  client.py  java_gateway.py  pyspark-test.py  serializers.py  test.py
python/scripts/: gen-stubs.py  gen_stubs.py
python/src/: algorithms.rs  base_modules.rs  dynamic.rs  edge.rs  graph.rs  graph_gen.rs  graph_loader.rs  graph_view.rs  graph_window.rs  graphql.rs  lib.rs  perspective.rs  util.rs  utils.rs  vertex.rs  wrappers.rs
python/test_utils/: filters_setup.py  utils.py
python/tests/: companies_house_example.ipynb  demo.ipynb  notebook.ipynb  nx.html  reddit_example.ipynb  test.py  test_algorithms.py  test_arrow_graph.py  test_arrowgraph.py  test_auth.py  test_disk_graph.py  test_diskgraph.py  test_docstring.py  test_export.py  test_graph_benchmarks.py  test_graph_conversions.py  test_graph_gen.py  test_graphdb.py  test_graphdb_imports.py  test_graphql.py  test_index.py  test_ingestion_equivalence_df.py  test_iterables.py  test_load_from_df.py  test_load_from_fireducks.py  test_load_from_pandas.py  test_load_from_parquet.py  test_load_from_polars.py  test_permissions.py  test_pyraphtory.py  test_repr.py  test_timezone.py  (+3 more)
raphtory/: Cargo.toml  build.rs  pyproject.toml
raphtory-api/: Cargo.toml
raphtory-api-macros/: Cargo.toml  build.rs
raphtory-arrow/: Cargo.toml
raphtory-benchmark/: Cargo.toml
raphtory-compute/: Cargo.toml
raphtory-core/: Cargo.toml
raphtory-cypher/: Cargo.toml
raphtory-filter/: Cargo.toml
raphtory-graphql/: Cargo.toml  build.rs  config.toml  readme.md  schema.graphql  test_graphql_docker.py
raphtory-io/: Cargo.toml
raphtory-memstorage/: Cargo.toml
raphtory-storage/: Cargo.toml  build.rs  part-00000-b406cce6-7ed0-4efb-883d-e6766f36d8cf-c000.snappy.parquet
(+6478 files in other folders)
