[workspace]
members = [
    "raphtory",
    "raphtory-benchmark",
    "examples/rust",
    "examples/netflow",
    "examples/custom-gql-apis",
    "python",
    "raphtory-graphql",
    "raphtory-api",
    "raphtory-core",
    "raphtory-storage",
    "raphtory-api-macros",
    "raphtory-itertools",
    "clam-core",
    "clam-core/snb"
    , "raphtory-itertools"]
default-members = ["raphtory"]
exclude = ["optd"]
resolver = "2"

[workspace.package]
version = "0.18.0"
documentation = "https://raphtory.readthedocs.io/en/latest/"
repository = "https://github.com/Raphtory/raphtory/"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/Raphtory/raphtory/"
keywords = ["graph", "temporal-graph", "temporal"]
authors = ["Pometry"]
rust-version = "1.91.1"
edition = "2021"

# debug symbols are using a lot of resources
[profile.dev]
split-debuginfo = "unpacked"
debug = 1

[profile.release-with-debug]
inherits = "release"
debug = true

# use this if you really need debug symbols
[profile.with-debug]
inherits = "dev"
debug = true

# for fast one-time builds (e.g., docs/CI)
[profile.build-fast]
inherits = "dev"
debug = false
incremental = false
opt-level = 1 # much smaller files


[workspace.dependencies]
db4-graph = { version = "0.18.0", path = "db4-graph", default-features = false }
db4-storage = { version = "0.18.0", path = "db4-storage" }
raphtory = { version = "0.18.0", path = "raphtory", default-features = false }
raphtory-api = { version = "0.18.0", path = "raphtory-api", default-features = false }
raphtory-api-macros = { version = "0.18.0", path = "raphtory-api-macros", default-features = false }
raphtory-core = { version = "0.18.0", path = "raphtory-core", default-features = false }
raphtory-graphql = { version = "0.18.0", path = "raphtory-graphql", default-features = false }
raphtory-storage = { version = "0.18.0", path = "raphtory-storage", default-features = false }
raphtory-itertools = { version = "0.18.0", path = "raphtory-itertools" }
clam-core = { version = "0.18.0", path = "clam-core" }
optd-core = { version = "0.18.0", path = "optd/optd/core" }
async-graphql = { version = "7.2.1", features = ["dynamic-schema"] }
bincode = { version = "2", features = ["serde"] }
async-graphql-poem = "7.2.1"
dynamic-graphql = "0.10.1"
derive_more = "2.1.1"
tikv-jemallocator = "0.6.1"
reqwest = { version = "0.12.28", default-features = false, features = [
    "rustls-tls",
    "multipart",
    "json",
] }
boxcar = "0.2.14"
iter-enum = { version = "1.2.1", features = ["rayon"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = { version = "1.0.149", features = ["float_roundtrip"] }
pyo3 = { version = "0.27.2", features = ["multiple-pymethods", "chrono"] }
pyo3-build-config = "0.27.2"
pyo3-arrow = "0.15.0"
numpy = "0.27.1"
itertools = "0.13.0"
rand = "0.9.2"
rayon = "1.11.0"
roaring = "0.10.12"
sorted_vector_map = "0.2.0"
tokio = { version = "1.50.0", features = ["full"] }
once_cell = "1.21.4"
parking_lot = { version = "0.12.5", features = [
    "serde",
    "arc_lock",
    "send_guard",
] }
ordered-float = "4.6.0"
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = "0.10.4"
tempfile = "3.27.0"
futures-util = "0.3.32"
thiserror = "2.0.18"
dotenv = "0.15.0"
csv = "1.4.0"
flate2 = "1.1.9"
regex = "1.12.3"
num-traits = "0.2.19"
num-integer = "0.1"
rand_distr = "0.5.1"
rustc-hash = "2.1.1"
twox-hash = "2.1.2"
tinyvec = { version = "1.11", features = ["serde", "alloc"] }
lock_api = { version = "0.4.14", features = ["arc_lock", "serde"] }
dashmap = { version = "6.1.0", features = ["serde", "rayon"] }
glam = "0.29.3"
quad-rand = "0.2.3"
zip = "2.4.2"
neo4rs = "0.8.0"
bzip2 = "0.4.4"
tantivy = "0.22.1"
async-trait = "0.1.89"
async-openai = "0.28.3"
num = "0.4.3"
display-error-chain = "0.2.2"
bigdecimal = { version = "0.4.10", features = ["serde"] }
kdam = "0.6.4"
hashbrown = { version = "0.14.5", features = ["raw"] }
pretty_assertions = "1.4.1"
streaming-stats = "0.2.3"
proptest = "1.11.0"
proptest-derive = "0.6.0"
criterion = "0.5.1"
crossbeam-channel = "0.5.15"
base64 = "0.22.1"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
spki = "0.7.3"
poem = { version = "3.1.12", features = ["compression", "embed", "static-files"] }
rust-embed = { version = "8.11.0", features = ["interpolate-folder-path"] }
opentelemetry = "0.27.1"
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27.0" }
tracing = { version = "0.1.44", features = ["log"] }
tracing-opentelemetry = "0.28.0"
tracing-subscriber = { version = "0.3.23", features = ["std", "env-filter"] }
indoc = "2.0.7"
walkdir = "2"
config = "0.14.1"
either = "=1.15.0"
clap = { version = "4.6.0", features = ["derive", "env"] }
memmap2 = { version = "0.9.10" }
ahash = { version = "0.8.12", features = ["serde"] }
bytemuck = { version = "1.25.0", features = ["derive"] }
ouroboros = "0.18.5"
url = "2.5"
base64-compat = { package = "base64-compat", version = "1.0.0" }
prost = "0.13.5"
prost-types = "0.13.5"
prost-build = "0.13.5"
lazy_static = "1.5.0"
pest = "2.8.6"
pest_derive = "2.8.6"
minijinja = "2.18.0"
minijinja-contrib = { version = "2.18.0", features = ["datetime"] }

lancedb = { version = "0.27.2", features = [] }
heed = "0.22.0"
sqlparser = "0.59.0"
futures = "0.3"
arrow = { version = "57.3.0" }
parquet = { version = "57.3.0" }
arrow-json = { version = "57.3.0" }
arrow-buffer = { version = "57.3.0" }
arrow-schema = { version = "57.3.0" }
arrow-csv = { version = "57.3.0" }
arrow-array = { version = "57.3.0", features = ["chrono-tz"] }
arrow-cast = { version = "57.3.0" }
arrow-ipc = { version = "57.3.0" }
arrow-data = { version = "57.3.0" }
arrow-select = { version = "57.3.0" }
serde_arrow = { version = "0.13.7", features = ["arrow-57"] }
moka = { version = "0.12.15", features = ["future"] }
indexmap = { version = "2.13.0", features = ["rayon"] }
fake = { version = "3.1.0", features = ["chrono"] }
strsim = { version = "0.11.1" }
uuid = { version = "1.22.0", features = ["v4"] }
bitvec = "1.0.1"
sysinfo = "0.37.2"
strum = "0.27.2"
strum_macros = "0.27.2"
pythonize = { version = "0.27.0" }
test-log = "0.2.19"
disjoint-sets = "0.4.2"
datafusion = { version = "52.5.0" }
datafusion-physical-expr-common = "52.5.0"
datafusion-physical-expr = "52.5.0"
datafusion-physical-plan = "52.5.0"
datafusion-expr-common = "52.5.0"

[workspace.dependencies.storage]
package = "db4-storage"
path = "db4-storage"

