[build-system]
requires = ["setuptools","requests","packaging"]
build-backend = "backend"
backend-path = ["python/_custom_build"]

[project]
name = "pyraphtory"
authors = [
    {name="Fabian Murariu"},
    {name="Lucas Jeub"},
    {name="Ben Steer"},
    {name="Haaroon Yousaf"}
]

license = {file = "python/pyraphtory/LICENSE"}
maintainers = [{name="Pometry", email="admin@pometry.com"}]
version = "0.1.4"
description = "Raphtory - Temporal Graph Analytics Platform. This is the Python version of the library."
readme = "python/pyraphtory/README.md"
requires-python = ">=3.9"
keywords = ["raphtory", "pyraphtory", "graph", "analytics", "temporal"]
classifiers = [
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache License',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
]
dependencies = [
    "pemja>=0.2.6,<0.3",
    "cloudpickle>=0.4,<0.5",
    "pandas>=1.4.3,<2",
    "requests>=2.28.1,<3",
    "parsy>=2.0,<3",
    "jpype1>=1.4.1,<2"
]

[project.urls]
homepage = "https://raphtory.com/"
repository = "https://github.com/rahptory/raphtory"
documentation = "https://docs.raphtory.com/"

[project.scripts]
raphtory-standalone = "pyraphtory.cli:standalone"
raphtory-classpath = "pyraphtory.cli:classpath"
raphtory-version = "pyraphtory.cli:version"

[project.optional-dependencies]
test = ["pytest>=7.1.3","tox"]
