[build-system]
requires = ["setuptools>=64.0","requests>=2.28","packaging"]
build-backend = "backend"
backend-path = ["python/_custom_build"]

[project]
name = "pyraphtory"
authors = [
    {name="Fabian Murariu"},
    {name="Lucas Jeub"},
    {name="Ben Steer"},
    {name="Haaroon Yousaf"}
]

license = {file = "LICENSE"}
maintainers = [{name="Pometry", email="admin@pometry.com"}]
description = "Raphtory - Temporal Graph Analytics Platform. This is the Python version of the library."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["raphtory", "pyraphtory", "graph", "analytics", "temporal"]
classifiers = [
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
]
dependencies = [
    "cloudpickle>=2.2.0,<3",
    "pandas>=1.5.2,<2",
    "requests>=2.28.1,<3",
    "parsy>=2.0,<3",
    "jpype1>=1.4.1,<2"
]
dynamic = ["version"]

[project.urls]
homepage = "https://raphtory.com/"
repository = "https://github.com/rahptory/raphtory"
documentation = "https://docs.raphtory.com/"

[project.scripts]
raphtory-standalone = "pyraphtory.cli:standalone"
raphtory-classpath = "pyraphtory.cli:classpath"
raphtory-version = "pyraphtory.cli:version"

[project.optional-dependencies]
test = ["pytest>=7.1.3", "nbmake>=1.3.5,<2", "pytest-xdist>=3.1.0,<4"]
distributed = ["pemja>=0.2.6,<0.3"]
docs = [
    "myst-parser",
    "sphinx-rtd-theme",
    "autodoc",
    "sphinx>=4.4.0",
    "docutils>=0.17.1",
    "sphinx-tabs",
    "nbsphinx",
    "ipykernel"
]

[tool.setuptools.dynamic]
version = {file = "version"}
