[build-system]
requires = ["setuptools>=64.0","requests>=2.28","packaging"]
build-backend = "backend"
backend-path = ["python/_custom_build"]

[project]
name = "pyraphtory"
authors = [
    {name="Fabian Murariu"},
    {name="Lucas Jeub"},
    {name="Ben Steer"},
    {name="Haaroon Yousaf"}
]

license = {file = "LICENSE"}
maintainers = [{name="Pometry", email="admin@pometry.com"}]
description = "Raphtory - Temporal Graph Analytics Platform. This is the Python version of the library."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["raphtory", "pyraphtory", "graph", "analytics", "temporal"]
classifiers = [
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
]
dependencies = [
    "cloudpickle>=2.2.0,<3",
    "pandas>=1.5.2,<2",
    "requests>=2.28.1,<3",
    "parsy>=2.0,<3",
    "jpype1>=1.4.1,<2"
]
dynamic = ["version"]

[project.urls]
homepage = "https://raphtory.com/"
repository = "https://github.com/rahptory/raphtory"
documentation = "https://docs.raphtory.com/"

[project.scripts]
raphtory-standalone = "pyraphtory._cli:standalone"
raphtory-clustermanager = "pyraphtory._cli:clustermanager"
raphtory-ingestion = "pyraphtory._cli:ingestion"
raphtory-partition = "pyraphtory._cli:partition"
raphtory-query = "pyraphtory._cli:query"
raphtory-classpath = "pyraphtory._cli:classpath"
raphtory-include = "pyraphtory._cli:include"
raphtory-version = "pyraphtory._cli:version"

[project.optional-dependencies]
test = [
    "pytest>=7.1.3",
    "nbmake>=1.3.5,<2",
    "matplotlib"
]
distributed = ["pemja>=0.3,<0.4",]
docs = [
    "myst-parser",
    "sphinx-rtd-theme",
    "autodoc",
    "sphinx>=4.4.0",
    "docutils>=0.17.1",
    "sphinx-tabs",
    "nbsphinx",
    "ipykernel",
    "matplotlib"
]

[tool.setuptools.dynamic]
version = {file = "version"}
