[package]
name = "db4-graph"
version.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
keywords.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
storage.workspace = true
raphtory-api.workspace = true
raphtory-core.workspace = true
rayon.workspace = true
