[package]
name = "disk-faiss"
# description = "Raphtory GraphQL server"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
keywords.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
# links = "faiss_c"
build = "build.rs"

[dependencies]
cpp = "0.5.4"

[build-dependencies]
cpp_build = "0.5.4"
