[package]
name = "js-raphtory"
authors = ["Fabian Murariu <murariu.fabian@gmail.com>"]
description = "A library for interacting with Raphtory from JavaScript."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
keywords.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3"
chrono = "0.4"
raphtory = { path = "../raphtory" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.35"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

#[workspace]
