[package]
name = "js-raphtory"
authors = ["Fabian Murariu <murariu.fabian@gmail.com>"]
description = "A library for interacting with Raphtory from JavaScript."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
keywords.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
chrono = { workspace = true }
raphtory = { path = "../raphtory" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { workspace = true, optional = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

#[workspace]
