[package]
name = "pyraphtory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyraphtory"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
docbrown-db = {path = "../docbrown/db"}
docbrown-core = {path = "../docbrown/core"}

parking_lot = { version = "0.12" , features = ["serde"] }
flume = "0.10"
futures = {version = "0.3", features = ["thread-pool"] }
replace_with = "0.1"
itertools="0.10"
csv = "1.1.6"
flate2 = "1.0"
regex = "1"
serde = { version = "1", features = ["derive", "rc"] }
rayon = "1"
chrono = "0.4"
bincode = "1"
