[package]
name = "raphtory-pymodule"
description = "Python package for raphtory, a temporal graph library"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "raphtory"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
numpy = { workspace = true }
raphtory_core = { path = "../raphtory", version = "0.15.0-b1", features = [
    "python",
    "search",
    "vectors",
    "proto",
], package = "raphtory" }
raphtory-graphql = { path = "../raphtory-graphql", version = "0.15.0-b1", features = [
    "python",
] }

[features]
default = ["extension-module"]
storage = ["raphtory_core/storage", "raphtory-graphql/storage"]
extension-module = ["pyo3/extension-module"]


[build-dependencies]
pyo3-build-config = { workspace = true }
