[package]
name = "raphtory-pymodule"
description = "Python package for raphtory, a temporal graph library"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_raphtory"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
raphtory = { workspace = true, features = [
    "python",
    "vectors",
] }
raphtory-graphql = { workspace = true, features = [
    "python",
] }
clam-core = { path = "../clam-core", features = ["python"] }


[features]
extension-module = ["pyo3/extension-module"]
search = ["raphtory/search", "raphtory-graphql/search"]
proto = ["raphtory/proto"]


[build-dependencies]
pyo3-build-config = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator.workspace = true
