[build-system]
requires = ["maturin>=1.4.0"]
build-backend = "maturin"

[project]
name = "raphtory"
requires-python = ">=3.8"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "pyvis >= 0.3.2",
    "networkx >= 2.6.3",
    "pandas >= 2.0.3",
    "pyarrow >=14.0.1, <16",
    "requests >= 2.31.0",
    "gql[all] == 3.5.0",
    "matplotlib >= 3.4.3",
]


[project.urls]
homepage = "https://github.com/pometry/raphtory"
documentation = "https://docs.raphtory.com/"
repository = "https://github.com/pometry/raphtory"
twitter = "https://twitter.com/raphtory/"
slack = "https://join.slack.com/t/raphtory/shared_invite/zt-xbebws9j-VgPIFRleJFJBwmpf81tvxA"
youtube = "https://www.youtube.com/@pometry8546/videos"

[project.optional-dependencies]
plot = ["seaborn >= 0.11.2"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
