[build-system]
requires = ["maturin>=1.8.3"]
build-backend = "maturin"

[project]
name = "raphtory"
requires-python = ">=3.9"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "pandas >= 2.0.3",
    "pyarrow >=18",
    "numpy >= 1.26.0",
]


[project.urls]
homepage = "https://github.com/pometry/raphtory"
documentation = "https://docs.raphtory.com/"
repository = "https://github.com/pometry/raphtory"
twitter = "https://twitter.com/raphtory/"
slack = "https://join.slack.com/t/raphtory/shared_invite/zt-xbebws9j-VgPIFRleJFJBwmpf81tvxA"
youtube = "https://www.youtube.com/@pometry8546/videos"

[project.optional-dependencies]
plot = ["seaborn >= 0.11.2", "matplotlib >= 3.4.3"]
pyvis = ["pyvis >= 0.3.2"]
networkx = ["networkx >= 2.6.3"]
export = ["raphtory[pyvis,networkx]"]
all = ["raphtory[export,plot]"]
dev = ["docstring_parser >= 0.16", "pandas-stubs", "maturin>=1.8.3", "tox>=4.25"]
test = ["raphtory[all]", "requests >= 2.31.0", "pyjwt[crypto] >= 2.10.1", "pytest >= 8"]
tox = ["nbmake"]

[tool.maturin]
features = ["extension-module"] # make sure to always specify this when building with private storage enabled
python-source = "python"
include = ["motif-images/*"]

[tool.pytest.ini_options]
pythonpath = ["test_utils"] # adds directories to the python path for tests
